[package]
name = "voidveil"
version = "0.1.0"
edition = "2021"
authors = ["Luke Saunderson (Cythru) <https://github.com/Cythru>"]
license = "AGPL-3.0-or-later"
description = "Drop-in AI privacy proxy. One env var. Complete data sovereignty."

[[bin]]
name = "voidveil"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rand = "0.8"
tower = "0.4"
http-body-util = "0.1"
rcgen = "0.13"
futures-util = "0.3"
tokio-stream = "0.1"
rustls = { version = "0.23", features = ["ring"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
